# SampleGame2048

./: .gitignore  .gitmodules  NOTICE.md  README.md  setup.py
cpp/: CMakeLists.txt
cpp/Classes/: AppDelegate.cpp  AppDelegate.h
cpp/Classes/bots/: BotController.cpp  BotController.h  IBot.h  PushTheTempoBot.cpp  PushTheTempoBot.h
cpp/Classes/game/: BoardTileMoveInfo.h  GameBoardProxy.cpp  GameBoardProxy.h  GameConfig.cpp  GameConfig.h  GameController.cpp  GameController.h  GameMoves.h  MainScene.cpp  MainScene.h  ScoreProxy.cpp  ScoreProxy.h
cpp/Classes/input/: InputManager.cpp  InputManager.h
cpp/Classes/localization/: AutoTranslator.cpp  AutoTranslator.h  LanguageIds.h  Localization.cpp  Localization.h  LocalizationManager.cpp  LocalizationManager.h  LocalizedStringIds.h
cpp/Classes/ui/: BottomUI.cpp  BottomUI.h  EndGameWindow.cpp  EndGameWindow.h  GameUI.cpp  GameUI.h  TopUI.cpp  TopUI.h
cpp/Classes/ui/components/: AutoTranslatedUIButton.cpp  AutoTranslatedUIButton.h  AutoTranslatedUIText.cpp  AutoTranslatedUIText.h
cpp/Classes/utils/: ButtonFactory.cpp  ButtonFactory.h  ServiceLocator.cpp  ServiceLocator.h  SimpleLogger.cpp  SimpleLogger.h
cpp/Classes/view/: GameBoardTile.cpp  GameBoardTile.h  GameView.cpp  GameView.h
cpp/Resources/: Localizations.json
cpp/proj.win32/: main.cpp
cpp/to_replace/cocos2d/cocos/: CMakeLists.txt
cpp/to_replace/cocos2d/cocos/base/: ccConfig.h
csharp_unity/Assets/Resources/: DOTweenSettings.asset
csharp_unity/Assets/Scenes/: MainScene.unity
csharp_unity/Assets/Src/: GameConfig.cs  GameInitializer.cs
csharp_unity/Assets/Src/Bots/: IBot.cs  PushTheTempoBot.cs
csharp_unity/Assets/Src/Config/: GameConfig.cs
csharp_unity/Assets/Src/Game/: GameBoardProxy.cs  GameController.cs
csharp_unity/Assets/Src/Input/: InputManager.cs
csharp_unity/Assets/Src/Localization/: LocalizationManager.cs
csharp_unity/Assets/Src/Utils/: ServiceLocator.cs
csharp_unity/Assets/Src/Utils/DependencyInjection/: DependencyInjectable.cs  DependencyInjectableUnity.cs  DependencyInjector.cs  IDependencyInjectable.cs
csharp_unity/Assets/Src/View/: GameBoardTile.cs  GameView.cs
csharp_unity/ProjectSettings/: ProjectSettings.asset
